--- a/style.css
+++ b/style.css
@@ -5,12 +5,20 @@
 }
 body{
     background-color: brown;
+    font-family: "Poppins";
 }
+/* nav-section */
 .nav-bar{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 10px;
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    background-color: #0F1624;
+    
 }
 .logo{
     display: flex;
@@ -19,6 +27,7 @@ body{
 }
 .logo p{
     color: #fff;
+    font-weight: 400;
 }
 .logo img{
     width: 35px;
@@ -30,8 +39,6 @@ body{
 .tuggle2{
     display: none;
 }
-
-
 @media screen and (min-width:768px){
 .tuggle ul{
     display: flex;
@@ -46,6 +53,9 @@ body{
 }
 }
 @media screen and (min-width:1023px){
+    .nav-bar{
+        padding: 30px;
+    }
     .nav-link ul{
         display: flex;
         list-style: none;
@@ -59,6 +69,55 @@ body{
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 150px;
+        gap: 120px;
     }
+}
+
+/* hero-section */
+.hero{
+    background-color: #0F1624;
+    padding: 40px;
+}
+.hero h1{
+    color: #FFFFFF;
+    font-weight: 700;
+    margin: 20px 0;
+}
+.hero p{
+    color: #fff;
+    font-weight: 600;
+    margin: 20px 0;
+}
+.hero img{
+    width: 100%;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+button{
+    background-color: #0469E0;
+    color: #FFFFFF;
+    border: none;
+    padding: 10px 40px;
+    border-radius: 40px;
+}
+.top{
+    margin-bottom: 20px;
+}
+
+@media screen and (min-width:1023px){
+.hero{
+    display: flex;
+    gap: 10%;
+    padding: 90px 90px 70px;
+}
+.hero h1,.hero p{
+    padding-bottom: 15px;
+}
+.hero img{
+    width: 100%;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    margin: 20px 0 20px;
+    justify-content: center;
+}
 }
