--- a/style.css
+++ b/style.css
@@ -76,17 +76,18 @@ body{
 /* hero-section */
 .hero{
     background-color: #0F1624;
-    padding: 40px;
+    padding: 25px;
+    margin-top: 20px;
 }
 .hero h1{
     color: #FFFFFF;
     font-weight: 700;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 .hero p{
     color: #fff;
     font-weight: 600;
-    margin: 20px 0;
+    margin: 30px 0;
 }
 .hero img{
     width: 100%;
@@ -101,7 +102,7 @@ button{
     border-radius: 40px;
 }
 .top{
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 @media screen and (min-width:1023px){
@@ -117,7 +118,46 @@ button{
     width: 100%;
     border-top-right-radius: 20px;
     border-bottom-left-radius: 20px;
-    margin: 20px 0 20px;
+    margin: 40px 0 40px;
     justify-content: center;
 }
+}
+
+/* about-section */
+.about{
+    background-color: #FFFFFF;;
+    padding: 25px;
+}
+.about img{
+    width: 100%;
+    height: 400px;
+    padding-top: 40px;
+    padding-right: 0;
+}
+.about h2{
+    color:#393535;
+    margin: 20px 0;
+}
+.about p{
+    color: #797979;
+    padding: 30px 0;
+}
+@media screen and (min-width:768px){
+    .about{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        background-color: #FFFFFF;;
+        gap: 10%;
+        padding-right: 0;
+    }
+}
+@media screen and (min-width:1023px){
+    .about{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        background-color: #FFFFFF;;
+        padding-right: 0;
+        padding-left: 90px;
+        gap: 25%;
+    }
 }
