--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 body{
-    background-color: brown;
     font-family: "Poppins";
 }
 /* nav-section */
@@ -153,10 +152,6 @@ button{
 }
 @media screen and (min-width:1023px){
     .about{
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        background-color: #FFFFFF;;
-        padding-right: 0;
         padding-left: 90px;
         gap: 25%;
     }
@@ -164,12 +159,13 @@ button{
 /* project-section */
 .projects{
  padding: 25px;
+ background-color: #fff;
 }
 .projects h2{
-    padding: 40px 0;
+    padding: 10px;
 }
 .card-row{
-    margin: 80px 25px;
+    margin: 80px 0;
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 5%;
@@ -189,7 +185,7 @@ button{
 .cards img{
     width: 100%;
     border-radius: 20px;
-    padding: 10px;
+    padding: 15px;
     align-items: center;
 }
 .cards h3{
@@ -209,4 +205,54 @@ hr{
 }
 .cards p{
     margin: 10px;
+}
+
+@media screen and (min-width:768px){
+hr{
+    left: 90px;
+}
+.card-row{
+    margin: 150px 0;
+}
+}
+@media screen and (min-width:1023px){
+.projects{
+    padding: 0 90px;
+}
+    .projects h2{
+        padding:25px 0;
+    }
+    
+    .card-row{
+    padding: 25px 50px 25px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10%;
+    margin: 0;
+}
+.cards img{
+   height: 270px;
+}
+hr{
+    width: 60%;
+    align-self: center;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    position: relative;
+    left: 100px;
+    height: 5px;
+    background-color: white;
+}
+}
+/* skills-section */
+.skills{
+    margin: 25px;
+}
+.skills-grid ul {
+    font-size: 20px;
+    font-weight: 600;
+    color: #535353;
+    margin: 25px;
+    
 }
